tests/rosetta/out/Fortran/array-length.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:39Z
program array_length
  implicit none
    integer, dimension(3) :: arr
    character(len=100) :: s0
    character(len=100) :: s1
  main()
  contains
  recursive integer function main() result(res)
    arr = (/'apple','orange','pear'/)
    write(s0,'(G0)') arr
    write(s1,'(G0)') size(arr)
    print *, trim(trim(trim('Length of ' // s0) // ' is ') // s1) // '.'
  end function main
end program array_length
